# INCUBATOR_V3_DEV

./: .gitignore  README.md  build_image.sh  init_pi.sh  init_unoq.sh  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
ai/: README.md
ai/train/: README.md
app/: auth.py  config.py  database.py  domain.py  main.py  models.py  schemas.py  settings_store.py  version.py
app/control/: __init__.py  bridge.py  loop.py
app/ota/: __init__.py  __main__.py  updater.py
app/providers/: base.py  esp32.py  factory.py  simulated.py
app/routes/: ai.py  camera.py  captures.py  growth.py  testing.py  web.py
app/services/: ai_service.py  alert_service.py  button_service.py  camera_service.py  captive_portal.py  cloud_service.py  esp32_link.py  fleet_service.py  gpio_service.py  growth_service.py  hardware_service.py  inference_service.py  llm_service.py  onboarding_service.py  setup_mode_service.py  storage_service.py  vision.py  vision_service.py  wifi_service.py
app/static/: app.css
app/static/css/: animations.css  components.css  layout.css  pages.css  tokens.css
app/static/js/: base.js  dashboard.js  hardware.js  login.js  network.js  onboarding.js  reset_password.js  settings.js  testing.js
app/templates/: base.html  dashboard.html  hardware.html  help.html  index.html  login.html  onboarding.html  reset_password.html  settings.html  status.html  testing.html
app/templates/dashboard/: index.html
app/templates/partials/: action_card.html  metric_card.html  nav.html  section_header.html  status_chip.html
build_image/: .gitignore  build.sh  config
database/: schema.sql
deploy/: incubator-control.service  incubator-firstboot.service  incubator-ota.service  incubator-ota.timer  incubator-update.service  incubator-update.timer  incubator-v3.env.example  incubator-v3.service  incubator.env.example  incubator.service
docs/: BUILD_WINDOWS.md  PI_DEPLOY.md  UNOQ_DEPLOY.md
firmware/esp32_cam/: README.md  platformio.ini
firmware/esp32_cam/src/: config.h  (+9 more)
hub/: README.md  mosquitto-incubator.conf  setup-hub.sh  units.example.csv
incubator_v3_dev.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/llm/: README.md
models/vision/: README.md
rpi-image/config/: incubator-pi-zero-2w.yaml
scripts/: auto_update.sh  bump_version.py  deploy_local_unoq.sh  download_models.sh  firstboot.sh  ota-agent.sh  start.sh  stop.sh  sync_runtime_models.sh  update.sh
tests/: conftest.py  test_alerts.py  test_ap_recovery.py  test_auth.py  test_camera_api.py  test_camera_service.py  test_camera_vision.py  test_captive_portal.py  test_control_bridge.py  test_control_loop.py  test_fleet_service.py  test_growth.py  test_network.py  test_open_ap.py  test_ota_rollback.py  test_password_reset.py  test_sensors_api.py  test_storage_pruning.py  test_testing_api.py  test_update_check.py  test_vision_plug_and_play.py  test_vision_stage.py  test_wifi_scan.py
training/llm/: README.md
training/vision/: README.md
(+9 files in other folders)
